@@ -1,3 +1,8 @@
+2005-03-04  Miklos Szeredi <miklos@szeredi.hu>
+
+	* kernel: fix nasty bug which could cause an Oops under certain
+	situations.  Found by Magnus Johansson
+
 2005-02-28  Miklos Szeredi <miklos@szeredi.hu>
 
 	* libfuse: added opendir() method.  This can be used in case
